--- a/StationeersMipsOptimiser/StationeersMipsOptimiser.csproj
+++ b/StationeersMipsOptimiser/StationeersMipsOptimiser.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFrameworks>netcoreapp2.1;net46</TargetFrameworks>
   </PropertyGroup>
 
 </Project>
